src/main/fabric8/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${project.artifactId}
spec:
  finalizers:
  - kubernetes
