src/main/fabric8/svc.yaml
apiVersion: v1
kind: Service
metadata:
spec:
  ports:
  - port: 8080
    name: http-tomcat
    protocol: TCP
    targetPort: 8080
#### Section for jgroup clustering
  - port: 4000
    name: nio-receiver
    protocol: TCP
    targetPort: 4000
  - port: 45564
    name: m-cast-service
    protocol: TCP
    targetPort: 45564
#####
  selector:
#  sessionAffinity: ClientIP
#  sessionAffinityConfig:
#    clientIP:
#      timeoutSeconds: 10800
  type: ClusterIP
